syntax = "proto3";

package product;

service ProductService {
  rpc GetProducts(Empty) returns (ProductList);
  rpc GetProduct(ProductId) returns (Product);
}

message Empty {}

message ProductId {
  string id = 1;
}

message Product {
  string id = 1;
  string name = 2;
  double price = 3;
  string imageDisplay = 4;
  repeated string merchImages = 5;
  bool newBadge = 6;
  repeated string size = 7;
  bool availability = 8;
  repeated string color = 9;
  string brand = 10;
  string description = 11;
  repeated Feature features = 12;
}

message Feature {
  string title = 1;
  string description = 2;
}

message ProductList {
  repeated Product products = 1;
}
